fix: visibility plan, get description in admin editor, syncrho is_visible, is_plan, is_featured, in admin editor | some CSS

--- a/src/app/ui/public/ui-step-card/ui-step-card.component.scss
+++ b/src/app/ui/public/ui-step-card/ui-step-card.component.scss
@@ -14,7 +14,7 @@
 }
 
 .step-desc {
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 3;
     overflow: hidden;
     -webkit-box-orient: vertical;
     display: -webkit-box;
