--- a/src/app/views/app-view/user-view/step-view/step-view.component.scss
+++ b/src/app/views/app-view/user-view/step-view/step-view.component.scss
@@ -6,10 +6,10 @@
 
 .list-group-item {
     margin-bottom: 9px;
-    border: 1px solid #aaa;
+    border: 1px solid #cecece;
     border-radius: 7px;
-    transition-duration: .3s;
-    background: #f7f7f7;
+    transition-duration: 0.3s;
+    background: #f9fbfd;
 
     &:hover {
         background: #f0f0f0;
